--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Arthropunk</title>
-	<style>href="./style.css"</style>
+	<style>href="/style.css"</style>
 </head>
 <body>
 	<h1>Arthropunk</h1>
