--- a/index.html
+++ b/index.html
@@ -5,9 +5,21 @@
 	<link>rel="stylesheet" href="style.css" type="text.css"</link>
 </head>
 <body>
-	<h1>Arthropunk</h1>
-	<h2>Webcomic by Vernon Meidlinger-Chin</h2>
-	
-	<footer><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a></footer>
+	<center><div style="background:url(https://imgur.com/MfUIu9Q.png) top center no-repeat; margin: 0 auto; padding-top: 170px;">
+		<a href="http://www.arthropunk.com/dailies/"><img src="https://i.imgur.com/7GfvAav.png" alt=""Dailies"" border="2px solid black" border-radius="100%" width="200" height="200" /></a>
+		<a href="http://www.rice-boy.com/all-my-friends-are-machines/"><img src="https://i.imgur.com/G4ocKvi.png" alt="All My Friends Are Machines" border="2px solid black" width="200" height="200" /></a>
+		<a href="http://www.rice-boy.com/caroline-carolina"><img src="https://i.imgur.com/DAiP4za.jpg" alt="Caroline/Carolina" border="2px solid black" width="200" height="200" /></a>
+	</div></center>
+	<div class="navigation"><center>
+		<a href="http://www.arthropunk.com/about"><img src="https://imgur.com/wZvUHlX.png" border=0></a>
+		<a href="http://www.arthropunk.com/comics"><img src="https://imgur.com/IPBhFlZ.png" border=0></a>
+		<a href="http://www.arthropunk.com/podcast"><img src="https://imgur.com/AjmqTnJ.png" border=0></a>
+		<a href="http://www.arthropunk.com/follow"><img src="https://imgur.com/zvlTbo3.png" border=0></a>
+		<a href="http://www.arthropunk.com/contact"><img src="https://imgur.com/9DEaj9p.png" border=0></a>
+		<!-- <a href="http://www.arthropunk.com/support"><img src="" border=0></a> -->
+	</center></div>
+<p><img src="https://i.imgur.com/7GfvAav.png"/></p>
+	<footer text-align="center"><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a>		"Arthropunk" and all related properties by Vernon Meidlinger-Chin are licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a></footer>
+
 </body>
 </html>
