--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
 </head>
 <body>
 	<center><div style="background:url(https://imgur.com/MfUIu9Q.png) top center no-repeat; margin: 0 auto; padding-top: 170px;">
-		<a href="http://www.arthropunk.com/dailies/"><img src="https://i.imgur.com/7GfvAav.png" alt=""Dailies"" border="2px solid black" border-radius="100%" width="200" height="200" /></a>
-		<a href="http://www.rice-boy.com/all-my-friends-are-machines/"><img src="https://i.imgur.com/G4ocKvi.png" alt="All My Friends Are Machines" border="2px solid black" width="200" height="200" /></a>
-		<a href="http://www.rice-boy.com/caroline-carolina"><img src="https://i.imgur.com/DAiP4za.jpg" alt="Caroline/Carolina" border="2px solid black" width="200" height="200" /></a>
+		<a href="http://www.arthropunk.com/dailies/"><img src="https://imgur.com/ErLeG1O.jpg" alt=""Dailies"" border="2px solid black"  width="200" height="70" /></a>
+		<a href="http://www.arthropunk.com/all-my-friends-are-machines/"><img src="https://imgur.com/fXqGXdG.jpg" 
+alt="All My Friends Are Machines" border="2px solid black" width="270" height="80" /></a>
+		<!-- <a href="http://www.arthropunk.com/caroline-carolina"><img src=""alt="Caroline/Carolina" border="2px solid black" width="200" height="200" /></a> -->
 	</div></center>
 	<div class="navigation"><center>
 		<a href="http://www.arthropunk.com/about"><img src="https://imgur.com/wZvUHlX.png" border=0></a>
@@ -18,8 +19,8 @@
 		<a href="http://www.arthropunk.com/contact"><img src="https://imgur.com/9DEaj9p.png" border=0></a>
 		<!-- <a href="http://www.arthropunk.com/support"><img src="" border=0></a> -->
 	</center></div>
-<p><img src="https://i.imgur.com/7GfvAav.png"/></p>
-	<footer text-align="center"><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a>		"Arthropunk" and all related properties by Vernon Meidlinger-Chin are licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a></footer>
+<p><img src="https://i.imgur.com/7GfvAav.png" width="500" height="500"/></p>
+	<footer text-align="center"><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a>"Arthropunk" and all related properties by Vernon Meidlinger-Chin are licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a></footer>
 
 </body>
 </html>
