--- a/index.html
+++ b/index.html
@@ -47,17 +47,17 @@ color: black;
 
 <body>
 	<center><div class="header">
-		<a href="http://www.arthropunk.com/dailies/"><img class="img-circle" src="https://imgur.com/dJgic4H.jpg" alt=""Dailies"" border="4px solid black"  width="200" height="200" /></a>
-		<a href="http://www.arthropunk.com/all-my-friends-are-machines/"><img class="img-circle" src="https://imgur.com/foROqsc.jpg" alt="All My Friends Are Machines" border="4px solid black" width="200" height="200" /></a>
-		<a href="http://www.arthropunk.com/caroline-carolina"><img class="img-circle" src="https://imgur.com/ltDbA24.jpg"alt="Caroline/Carolina" border="4px solid black" width="200" height="200" /></a>
+		<a href="/dailies.html"><img class="img-circle" src="https://imgur.com/dJgic4H.jpg" alt=""Dailies"" border="4px solid black"  width="200" height="200" /></a>
+		<a href="/all-my-friends-are-machines.html"><img class="img-circle" src="https://imgur.com/foROqsc.jpg" alt="All My Friends Are Machines" border="4px solid black" width="200" height="200" /></a>
+		<a href="/short-stories.html"><img class="img-circle" src="https://imgur.com/ltDbA24.jpg"alt="Short Stories" border="4px solid black" width="200" height="200" /></a>
 	</div></center>
 	<div class="navigation"><center>
-		<a href="http://www.arthropunk.com/about"><img src="https://imgur.com/wZvUHlX.png" border=0></a>
-		<a href="http://www.arthropunk.com/comics"><img src="https://imgur.com/IPBhFlZ.png" border=0></a>
-		<a href="http://www.arthropunk.com/podcast"><img src="https://imgur.com/AjmqTnJ.png" border=0></a>
-		<a href="http://www.arthropunk.com/follow"><img src="https://imgur.com/zvlTbo3.png" border=0></a>
-		<!-- <a href="http://www.arthropunk.com/contact"><img src="https://imgur.com/9DEaj9p.png" border=0></a> -->
-		<!-- <a href="http://www.arthropunk.com/support"><img src="" border=0></a> -->
+		<a href="/about.html"><img src="https://imgur.com/wZvUHlX.png" border=0></a>
+		<a href="/comics.hmtl"><img src="https://imgur.com/IPBhFlZ.png" border=0></a>
+		<a href="/podcast.html"><img src="https://imgur.com/AjmqTnJ.png" border=0></a>
+		<a href="/follow.html"><img src="https://imgur.com/zvlTbo3.png" border=0></a>
+		<!-- <a href="/contact.html"><img src="https://imgur.com/9DEaj9p.png" border=0></a> -->
+		<!-- <a href="/support.html"><img src="" border=0></a> -->
 	</center></div>
 <p><img src="https://i.imgur.com/7GfvAav.png" width="500" height="500"/></p>
 	<footer text-align="center"><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a>		"Arthropunk" and all related properties by Vernon Meidlinger-Chin are licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a></footer>
