--- a/about.html
+++ b/about.html
@@ -47,17 +47,17 @@ color: black;
 
 <body>
 	<center><div class="header">
-		<a href="http://www.arthropunk.com/dailies/"><img class="img-circle" src="https://imgur.com/dJgic4H.jpg" alt=""Dailies"" border="4px solid black"  width="200" height="200" /></a>
-		<a href="http://www.arthropunk.com/all-my-friends-are-machines/"><img class="img-circle" src="https://imgur.com/foROqsc.jpg" alt="All My Friends Are Machines" border="4px solid black" width="200" height="200" /></a>
-		<a href="http://www.arthropunk.com/caroline-carolina"><img class="img-circle" src="https://imgur.com/ltDbA24.jpg"alt="Caroline/Carolina" border="4px solid black" width="200" height="200" /></a>
+		<a href="/dailies.html"><img class="img-circle" src="https://imgur.com/dJgic4H.jpg" alt=""Dailies"" border="4px solid black"  width="200" height="200" /></a>
+		<a href="/all-my-friends-are-machines.html"><img class="img-circle" src="https://imgur.com/foROqsc.jpg" alt="All My Friends Are Machines" border="4px solid black" width="200" height="200" /></a>
+		<a href="/short-stories.html"><img class="img-circle" src="https://imgur.com/ltDbA24.jpg"alt="Short Stories" border="4px solid black" width="200" height="200" /></a>
 	</div></center>
 	<div class="navigation"><center>
-		<a href="http://www.arthropunk.com/about"><img src="https://imgur.com/wZvUHlX.png" border=0></a>
-		<a href="http://www.arthropunk.com/comics"><img src="https://imgur.com/IPBhFlZ.png" border=0></a>
-		<a href="http://www.arthropunk.com/podcast"><img src="https://imgur.com/AjmqTnJ.png" border=0></a>
-		<a href="http://www.arthropunk.com/follow"><img src="https://imgur.com/zvlTbo3.png" border=0></a>
-		<!-- <a href="http://www.arthropunk.com/contact"><img src="https://imgur.com/9DEaj9p.png" border=0></a> -->
-		<!-- <a href="http://www.arthropunk.com/support"><img src="" border=0></a> -->
+		<a href="/about.html"><img src="https://imgur.com/wZvUHlX.png" border=0></a>
+		<a href="/comics.html"><img src="https://imgur.com/IPBhFlZ.png" border=0></a>
+		<a href="/podcast.html"><img src="https://imgur.com/AjmqTnJ.png" border=0></a>
+		<a href="/follow.html"><img src="https://imgur.com/zvlTbo3.png" border=0></a>
+		<!-- <a href="/contact.html"><img src="https://imgur.com/9DEaj9p.png" border=0></a> -->
+		<!-- <a href="/support.html"><img src="" border=0></a> -->
 	</center></div>
 
 <p>
