--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ color: black;
 		<a href="/short-stories.html"><img class="img-circle" src="https://imgur.com/ltDbA24.jpg"alt="Short Stories" border="4px solid black" width="200" height="200" /></a>
 	</div></center>
 	<div class="navigation"><center>
-		<a href="/about.html"><img src="https://imgur.com/wZvUHlX.png" border=0></a>
+		<a href="/Webcomic/about.html"><img src="https://imgur.com/wZvUHlX.png" border=0></a>
 		<a href="/comics.hmtl"><img src="https://imgur.com/IPBhFlZ.png" border=0></a>
 		<a href="/podcast.html"><img src="https://imgur.com/AjmqTnJ.png" border=0></a>
 		<a href="/follow.html"><img src="https://imgur.com/zvlTbo3.png" border=0></a>
