--- a/follow.html
+++ b/follow.html
@@ -47,58 +47,23 @@ color: black;
 
 <body>
 	<center><div class="header">
-		<a href="http://www.arthropunk.com/dailies/"><img class="img-circle" 
-
-src="https://imgur.com/dJgic4H.jpg" alt=""Dailies"" border="4px solid black"  width="200" height="200" 
-
-/></a>
-		<a href="http://www.arthropunk.com/all-my-friends-are-machines/"><img class="img-circle" 
-
-src="https://imgur.com/foROqsc.jpg" alt="All My Friends Are Machines" border="4px solid black" 
-
-width="200" height="200" /></a>
-		<a href="http://www.arthropunk.com/caroline-carolina"><img class="img-circle" 
-
-src="https://imgur.com/ltDbA24.jpg"alt="Caroline/Carolina" border="4px solid black" width="200" 
-
-height="200" /></a>
+		<a href="dailies.html"><img class="img-circle"src="https://imgur.com/dJgic4H.jpg" alt=""Dailies"" border="4px solid black" width="200" height="200"/></a>
+		<a href="all-my-friends-are-machines.html"><img class="img-circle"src="https://imgur.com/foROqsc.jpg" alt="All My Friends Are Machines" border="4px solid black" width="200" height="200" /></a>
+		<a href="short-stories.html"><img class="img-circle" src="https://imgur.com/ltDbA24.jpg"alt="Short Stories" border="4px solid black" width="200" height="200" /></a>
 	</div></center>
 	<div class="navigation"><center>
-		<a href="Webcomic/about.html"><img src="https://imgur.com/wZvUHlX.png" border=0></a>
-		<a href="Webcomic/comics.html"><img src="https://imgur.com/IPBhFlZ.png" border=0></a>
-		<a href="Webcomic/podcast.html"><img src="https://imgur.com/AjmqTnJ.png" border=0></a>
-		<a href="Webcomic/follow.html"><img src="https://imgur.com/zvlTbo3.png" border=0></a>
-		<!-- <a href="http://www.arthropunk.com/contact"><img src="https://imgur.com/9DEaj9p.png" 
-
-border=0></a> -->
-		<!-- <a href="http://www.arthropunk.com/support"><img src="" border=0></a> -->
+		<a href="about.html"><img src="https://imgur.com/wZvUHlX.png" border=0></a>
+		<a href="comics.html"><img src="https://imgur.com/IPBhFlZ.png" border=0></a>
+		<a href="podcast.html"><img src="https://imgur.com/AjmqTnJ.png" border=0></a>
+		<a href="follow.html"><img src="https://imgur.com/zvlTbo3.png" border=0></a>
+		<!-- <a href="http://www.arthropunk.com/contact"><img src="https://imgur.com/9DEaj9p.png" border=0></a><a href="http://www.arthropunk.com/support"><img src="" border=0></a> -->
 	</center></div>
 <p>
-	<a href="https://www.instagram.com/arthropunk/"><img src="Webcomic/ig.png" alt="instagram" 
-
-border=0 height="100" width="100"></a>
-	<a href="https://twitter.com/adventurevernon"><img src="Webcomic/tw.png" alt="twitter" border=0 
-
-height="100" width="100"></a><br />
-	<a href="https://arthropunk.tumblr.com"><img src="Webcomic/tb.png" alt="tumblr" border=0 
-
-height="100" width="100"></a>
-	<a href="https://www.facebook.com/TheSandMusic/"><img src="Webcomic/fb.png" alt="facebook" 
-
-border=0 height="100" width="100"></a>
-		<!-- <a href=""><img src="" border=0></a> -->
-</p>
-	<footer text-align="center"><a rel="license" href="http://creativecommons.org/licenses/by-nc-
-
-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" 
-
-src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a>"Arthropunk" and all related 
-
-properties by Vernon Meidlinger-Chin are licensed under a <a rel="license" 
-
-href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-
-
-ShareAlike 4.0 International License</a></footer>
-
+	<a href="https://www.instagram.com/arthropunk/"><img src="ig.PNG" alt="instagram" border=0 height="100" width="100"></a>
+	<a href="https://twitter.com/adventurevernon"><img src="tw.PNG" alt="twitter" border=0 height="100" width="100"></a><br />
+	<a href="https://arthropunk.tumblr.com"><img src="tn.PNG" alt="tumblr" border=0 height="100" width="100"></a>
+	<a href="https://www.facebook.com/TheSandMusic/"><img src="fb.PNG" alt="facebook" border=0 height="100" width="100"></a>
+		<!-- <a href=""><img src="" alt="Patreon"border=0></a> --></p>
+	<footer text-align="center"><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a>"Arthropunk" and all related properties by Vernon Meidlinger-Chin are licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a></footer>
 </body>
 </html>
