--- a/follow.html
+++ b/follow.html
@@ -41,7 +41,9 @@ padding-top: 150px;
 	a {
 color: black;
 	}
-</style></head>
+</style>
+	<title>Follow - Arthropunk</title>
+	</head>
 
 <!-- Begin Webcomic Content -->
 
