--- a/follow.html
+++ b/follow.html
@@ -38,7 +38,7 @@ padding-top: 150px;
 
 a {color: black;}
 
-</style></head>
+	</style><title>Follow - Arthropunk</title></head>
 
 <!-- Begin Webcomic Content -->
 
