--- a/follow.html
+++ b/follow.html
@@ -44,17 +44,18 @@ a {color: black;}
 
 <body>
 	<center><div class="header">
-		<a href="dailies.html"><img class="img-circle" src="https://imgur.com/dJgic4H.jpg" alt=""Dailies"" border="4px solid black"  width="200" height="200" /></a>
-		<a href="all-my-friends-are-machines.html"><img class="img-circle" src="https://imgur.com/foROqsc.jpg" alt="All My Friends Are Machines" border="4px solid black" width="200" height="200" /></a>
-		<a href="short-stories.html"><img class="img-circle" src="https://imgur.com/ltDbA24.jpg"alt="Short Stories" border="4px solid black" width="200" height="200" /></a>
+		<a href="dailies.html"><img class="img-circle" src="dailies.jpg.jpg" alt=""Dailies"" border="4px solid black"  width="200" height="200" /></a>
+		<a href="all-my-friends-are-machines.html"><img class="img-circle" src="amfam.jpg.jpg" alt="All My Friends Are Machines" border="4px solid black" width="200" height="200" /></a>
+		<a href="short-stories.html"><img class="img-circle" src="short-stories.jpg.jpg"alt="Short Stories" border="4px solid black" width="200" height="200" /></a>
 	</div></center>
 	<div class="navigation"><center>
-		<a href="about.html"><img src="https://imgur.com/wZvUHlX.png" border=0></a>
-		<a href="comics.html"><img src="https://imgur.com/IPBhFlZ.png" border=0></a>
-		<a href="podcast.html"><img src="https://imgur.com/AjmqTnJ.png" border=0></a>
-		<a href="follow.html"><img src="https://imgur.com/zvlTbo3.png" border=0></a>
-		<!-- <a href="http://www.arthropunk.com/contact"><img src="https://imgur.com/9DEaj9p.png" border=0></a> -->
-		<!-- <a href="http://www.arthropunk.com/support"><img src="" border=0></a> -->
+		<a href="index.html"><img src="home.PNG border=0><a>
+		<a href="about.html"><img src="about.PNG" border=0></a>
+		<a href="comics.hmtl"><img src="comics.PNG" border=0></a>
+		<a href="podcast.html"><img src="podcast.PNG" border=0></a>
+		<a href="follow.html"><img src="follow.PNG" border=0></a>
+		<!-- <a href="/contact.html"><img src="https://imgur.com/9DEaj9p.png" border=0></a> -->
+		<!-- <a href="/support.html"><img src="" border=0></a> -->
 	</center></div>
 <center><div class="social-media">
 	<a href="https://www.instagram.com/arthropunk/"><img src="ig.PNG" alt="instagram" border=0 height="150" width="150"/></a>	
