--- a/follow.html
+++ b/follow.html
@@ -49,7 +49,7 @@ a {color: black;}
 		<a href="short-stories.html"><img class="img-circle" src="short-stories.jpg.jpg"alt="Short Stories" border="4px solid black" width="200" height="200" /></a>
 	</div></center>
 	<div class="navigation"><center>
-		<a href="index.html"><img src="home.PNG border=0><a>
+		<a href="index.html"><img src="home.PNG" border=0></a>
 		<a href="about.html"><img src="about.PNG" border=0></a>
 		<a href="comics.hmtl"><img src="comics.PNG" border=0></a>
 		<a href="podcast.html"><img src="podcast.PNG" border=0></a>
