--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ border: 4px solid #FF3;
 	}
 
 	.header {
-background:url(https://imgur.com/MfUIu9Q.png) top center no-repeat; 
+background:url(title.PNG) top center no-repeat; 
 margin: 0 auto; 
 padding-top: 150px;
 	}
