--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@ a {color: black;}
 	<div class="navigation"><center>
 		<a href="index.html"><img src="home.PNG" border=0></a>
 		<a href="about.html"><img src="about.PNG" border=0></a>
-		<a href="comics.hmtl"><img src="comics.PNG" border=0></a>
+		<a href="comics.html"><img src="comics.PNG" border=0></a>
 		<a href="podcast.html"><img src="podcast.PNG" border=0></a>
 		<a href="follow.html"><img src="follow.PNG" border=0></a>
 		<!-- <a href="/contact.html"><img src="https://imgur.com/9DEaj9p.png" border=0></a>
