--- a/follow.html
+++ b/follow.html
@@ -1,34 +1,34 @@
 <!DOCTYPE html>
 <html>
 <head><style>
-	p {
-font-size: 16px;
-text-align: left;
-font-family: "georgia";
-border: 0px solid black;
-width: 500px;
-margin: 50px auto;
-	}
-
-	#intro{
-padding: 50px;
-margin: 50px 100px;
+p {
+	font-size: 16px;
+	text-align: left;
+	font-family: "georgia";
+	border: 0px solid black;
+	width: 500px;
+	margin: 50px auto;
 }
 
-	footer {
-text-align: center;
-margin: 150px auto 0px auto;
-border: 1px dotted black;
-padding: 0px 0px;
-font-family: "georgia";
-width: 700px;	
-	}
+#intro{
+	padding: 50px;
+	margin: 50px 100px;
+}
 
-	.header {
-background:url(https://imgur.com/MfUIu9Q.png) top center no-repeat; 
-margin: 0 auto; 
-padding-top: 150px;
-	}
+footer {
+	text-align: center;
+	margin: 150px auto 0px auto;
+	border: 1px dotted black;
+	padding: 0px 0px;
+	font-family: "georgia";
+	width: 700px;	
+}
+
+.header {
+	background:url(title.PNG) top center no-repeat; 
+	margin: 0 auto; 
+	padding-top: 150px;
+}
 
 .img-circle {border-radius: 50%;}
 
@@ -44,14 +44,14 @@ a {color: black;}
 
 <body>
 	<center><div class="header">
-		<a href="dailies.html"><img class="img-circle" src="dailies.jpg.jpg" alt=""Dailies"" border="4px solid black"  width="200" height="200" /></a>
-		<a href="all-my-friends-are-machines.html"><img class="img-circle" src="amfam.jpg.jpg" alt="All My Friends Are Machines" border="4px solid black" width="200" height="200" /></a>
-		<a href="short-stories.html"><img class="img-circle" src="short-stories.jpg.jpg"alt="Short Stories" border="4px solid black" width="200" height="200" /></a>
+		<a href="comics.html#dailies"><img class="img-circle" src="dailies.jpg.jpg" alt=""Dailies"" border="4px solid black"  width="200" height="200" /></a>
+		<a href="comics.html#all-my-friends-are-machines"><img class="img-circle" src="amfam.jpg.jpg" alt="All My Friends Are Machines" border="4px solid black" width="200" height="200" /></a>
+		<a href="comics.html#short-stories"><img class="img-circle" src="short-stories.jpg.jpg"alt="Short Stories" border="4px solid black" width="200" height="200" /></a>
 	</div></center>
 	<div class="navigation"><center>
 		<a href="index.html"><img src="home.PNG" border=0></a>
 		<a href="about.html"><img src="about.PNG" border=0></a>
-		<a href="comics.hmtl"><img src="comics.PNG" border=0></a>
+		<a href="comics.html"><img src="comics.PNG" border=0></a>
 		<a href="podcast.html"><img src="podcast.PNG" border=0></a>
 		<a href="follow.html"><img src="follow.PNG" border=0></a>
 		<!-- <a href="/contact.html"><img src="https://imgur.com/9DEaj9p.png" border=0></a> -->
