--- a/comics.html
+++ b/comics.html
@@ -35,7 +35,7 @@ footer {
 .img-circle:hover {border: 4px solid #FF3;}
 
 .header {
-	background:url(https://imgur.com/MfUIu9Q.png) top center no-repeat; 
+	background:url(title.PNG) top center no-repeat; 
 	margin: 0 auto; 
 	padding-top: 150px;
 }
@@ -57,7 +57,7 @@ td {padding: 5px;}
 
 <body><div class="navigation"><center>
 	<a href="index.html"><img src="home.PNG" border=0></a>
-  <a href="about.html"><img src="about.PNG" border=0></a>
+  	<a href="about.html"><img src="about.PNG" border=0></a>
 	<a href="comics.html"><img src="comics.PNG" border=0></a>
 	<a href="podcast.html"><img src="podcast.PNG" border=0></a>
 	<a href="follow.html"><img src="follow.PNG" border=0></a>
@@ -66,10 +66,10 @@ td {padding: 5px;}
 </div>
 
 <table> <td><a><img src="dailies.jpg.jpg" width="250" height="250" border="1px solid black"/></a></td>
-	<td><h2 id="dailies">"Dailies"</h2>Gags! Jokes! One-shot cartoons, some of which kind of tell a story<br><br><i>~page count:</i><br>/ 1 / 2 / 3 / 4 / 5 / 6 / 7 /	8 / 9 / 10 / 11 / 12 / 13 / 14 / 15 / 16 / 17 /	18 / 19 / 20 / 21 / 22 / 23 / 24 / 25 / 26 / 27 / 28 / 29 / 30 / 31 / 32 / 33 / 34 / 35 / 36 / 37 / 38 / 39 / 40 / 41 / 42 / 43 / 44 / 45 / 46 / 47 / 48 / 49 / 50 /</td></tr></table>
+	<td><h2 id="dailies">"Dailies"</h2>Gags! Jokes! One-shot cartoons, some of which kind of tell a story<br><br><i>~page count:</i><br>/ 1 / 2 / 3 / 4 / 5 / 6 / 7 / 8 / 9 / 10 / 11 / 12 / 13 / 14 / 15 / 16 / 17 /	18 / 19 / 20 / 21 / 22 / 23 / 24 / 25 / 26 / 27 / 28 / 29 / 30 / 31 / 32 / 33 / 34 / 35 / 36 / 37 / 38 / 39 / 40 / 41 / 42 / 43 / 44 / 45 / 46 / 47 / 48 / 49 / 50 /</td></tr></table>
 
 <table> <td><a><img src="https://imgur.com/foROqsc.jpg" width="250" height="250" border="1px solid black"/></a></td>
-	<td><h2 id="all-my-friends-are-machines>"All My Friends Are Machines"</h2>After a chance encounter at the supermarket, Gregor tells a meandering tale to Richard detailing the challenges he faced prior to their friendship<br><br><i>~ page count:</i><br>/ 1 / 2 / 3 / 4 / 5 / 6 / 7 / 8 / 9 / 10 / 11 / 12 / 13 /	14 / 15 / 16 / 17 / 18 / 19 / 20 / 21 /	22 / 23 / 24 / 25 / 26 / 27 / 28 / 29 / 30 / 31 / 32 / 33 / 34 / 35 / 36 / 37 / 38 / 39 / 40 / 41 / 42 / 43 / 44 / 45 /	46 / 47 / 48 / 49 / 50 /<br></td></tr></table>
+	<td><h2 id="all-my-friends-are-machines">"All My Friends Are Machines"</h2>After a chance encounter at the supermarket, Gregor tells a meandering tale to Richard detailing the challenges he faced prior to their friendship<br><br><i>~ page count:</i><br>/ 1 / 2 / 3 / 4 / 5 / 6 / 7 / 8 / 9 / 10 / 11 / 12 / 13 /	14 / 15 / 16 / 17 / 18 / 19 / 20 / 21 /	22 / 23 / 24 / 25 / 26 / 27 / 28 / 29 / 30 / 31 / 32 / 33 / 34 / 35 / 36 / 37 / 38 / 39 / 40 / 41 / 42 / 43 / 44 / 45 /	46 / 47 / 48 / 49 / 50 /<br></td></tr></table>
 
 <table> <td><a><img src="short-stories.jpg.jpg" width="250" height="250" border="1px solid black"/></a></td>
 	<td><h2 id="short-stories">"Never never never never never"</h2>In this science-fiction tale, set not so far in the future, humanity faces the most frightening cosmic threat: loneliness.<br><br><i>~page count:</i><br>/ 1 / 2 / 3 / 4 / 5 / 6 / 7 / 8 / 9 / 10 / 11 / 12 / 13 / 14 </td></tr></table>
