Update and rename comics/never1.html to never1.html

--- a/never1.html
+++ b/never1.html
@@ -58,16 +58,16 @@ td {padding: 5px;}
 <body>
 <center>
 <div class="navigation">
-	<a href="Webcomic/index.html"><img src="home.PNG" border=0 alt="Home"></a>
-	<a href="Webcomic/about.html"><img src="about.PNG" border=0 alt="About"></a>
-	<a href="Webcomic/comics.html"><img src="comics.PNG" border=0 alt="Comics"></a>
-	<a href="Webcomic/podcast.html"><img src="podcast.PNG" border=0 alt="Podcast"></a>
-	<a href="Webcomic/follow.html"><img src="follow.PNG" border=0 alt="Follow"></a>
+	<a href="index.html"><img src="home.PNG" border=0 alt="Home"></a>
+	<a href="about.html"><img src="about.PNG" border=0 alt="About"></a>
+	<a href="comics.html"><img src="comics.PNG" border=0 alt="Comics"></a>
+	<a href="podcast.html"><img src="podcast.PNG" border=0 alt="Podcast"></a>
+	<a href="follow.html"><img src="follow.PNG" border=0 alt="Follow"></a>
 	<!-- <a href="Webcomic/contact.html"><img src="https://imgur.com/9DEaj9p.png" border=0></a> -->
 	<!-- <a href="Webcomic/support.html"><img src="" border=0></a> -->
 </div>
-  <img src="Webcomic/never1.jpg" width="750" height="750"/><br />
-  <a href="never2.html"><img src="Webcomic/next.jpg" alt="next" width="135px" height="48px"/></a>
+  <img src="never1.jpg" width="750" height="750"/><br />
+  <a href="never2.html"><img src="next.jpg" alt="next" width="135px" height="48px"/></a>
 </center>
 
   <footer text-align="center"><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a>"Arthropunk" and all related properties by Vernon Meidlinger-Chin are licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a></footer>
