--- a/podcast.html
+++ b/podcast.html
@@ -31,7 +31,7 @@ footer {
 a {color: black;}
 	
 </style>
-	<title> Arthropunk by Vernon Meidlinger-Chin</title>
+	<title> Podcast - Arthropunk</title>
 	</head>
 
 <!-- Begin Webcomic Content -->
