--- a/comics.html
+++ b/comics.html
@@ -56,6 +56,13 @@ table {
 	margin: 50px auto 0 auto;
 }
 
+table.short-stories{
+	font-size: 16px;
+	font-family: "georgia";
+	width: 600px;
+	margin: 0 auto;
+}
+	
 td {padding: 5px;}
 
 </style><title>Comics - Arthropunk</title></head>
@@ -79,8 +86,11 @@ td {padding: 5px;}
 	<td><h2 id="all-my-friends-are-machines">"All My Friends Are Machines"</h2>After a chance encounter at the supermarket, Gregor tells a meandering tale to Richard detailing the challenges he faced prior to their friendship<br><br><i>~ page count:</i><br>/ 1 / 2 / 3 / 4 / 5 / 6 / 7 / 8 / 9 / 10 / 11 / 12 / 13 /	14 / 15 / 16 / 17 / 18 / 19 / 20 / 21 /	22 / 23 / 24 / 25 / 26 / 27 / 28 / 29 / 30 / 31 / 32 / 33 / 34 / 35 / 36 / 37 / 38 / 39 / 40 / 41 / 42 / 43 / 44 / 45 /	46 / 47 / 48 / 49 / 50 /<br></td></tr></table>
 
 	<h1 id="short-stories">Short Stories</h1>
-<table> <td><a><img src="short-stories.jpg.jpg" width="250" height="250" border="1px solid black"/></a></td>
+<table class="short-stories"><td><a><img src="short-stories.jpg.jpg" width="250" height="250" border="1px solid black"/></a></td>
 	<td><h2>"Never never never never never"</h2>In this science-fiction tale, set not so far in the future, humanity faces the most frightening cosmic threat: loneliness.<br><br><i>~page count:</i><br><a href="never1.html">1</a> / <a href="never2.html">2</a> / <a href="never3.html">3</a> / <a href="never4.html">4</a> / <a href="never5.html">5</a> / <a href="never6.html">6</a> / <a href="never7.html">7</a> / <a href="never8.html">8</a> / <a href="never9.html">9</a> / <a href="never10.html">10</a> / <a href="never11.html">11</a> / <a href="never12.html">12</a> </td></tr></table>
+
+<table><td><a><img src="tetzlaff.jpg" width="250" height="250" border="1px solid black"/></a></td>
+	<td><h2>"Michael Tetzlaff and the World's Best Borscht"</h2>Originally published in <i>Scoff Zine</i>, 2013.<br><br><i>~page count:</i><br><a href="Tetzlaff11.html">1</a> / <a href="Tetzlaff2.html">2</a> / <a href="Tetzlaff3.html">3</a> / <a href="Tetzlaff4.html">4</a></td></tr></table>
   
 	<footer text-align="center"><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a>"Arthropunk" and all related properties by Vernon Meidlinger-Chin are licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a></footer>
 
