--- a/comics.html
+++ b/comics.html
@@ -6,7 +6,7 @@ h1 {
 	text-align: center;
 	font-family: "georgia";
 	text-transform: uppercase;
-	margin: 50px auto 0 auto; 
+	margin: 50px auto 10px auto; 
 }
 	
 h2 {
@@ -79,7 +79,6 @@ td {padding: 5px;}
 	<!-- <a href="http://www.arthropunk.com/contact"><img src="https://imgur.com/9DEaj9p.png" border=0></a> 
 	<a href="http://www.arthropunk.com/support"><img src="" border=0></a> -->
 </div>
-	<h1>Dailies</h1>
 <table> <td><a><img src="dailies.jpg.jpg" width="250" height="250" border="1px solid black"/></a></td>
 	<td><h2 id="dailies">"Dailies"</h2>Gags! Jokes! One-shot cartoons, some of which kind of tell a story<br><br><i>~page count:</i><br>/ 1 / 2 / 3 / 4 / 5 / 6 / 7 / 8 / 9 / 10 / 11 / 12 / 13 / 14 / 15 / 16 / 17 /	18 / 19 / 20 / 21 / 22 / 23 / 24 / 25 / 26 / 27 / 28 / 29 / 30 / 31 / 32 / 33 / 34 / 35 / 36 / 37 / 38 / 39 / 40 / 41 / 42 / 43 / 44 / 45 / 46 / 47 / 48 / 49 / 50 /</td></tr></table>
 
