--- a/Tetzlaff3.html
+++ b/Tetzlaff3.html
@@ -41,7 +41,7 @@ table {
 	margin: 50px auto 0 auto;
 }
 td {padding: 5px;}
-</style><title>Page 9</title></head>
+</style><title>Page 3</title></head>
 
 <!-- Begin Webcomic Content -->
 
@@ -56,7 +56,7 @@ td {padding: 5px;}
 	<!-- <a href="Webcomic/contact.html"><img src="https://imgur.com/9DEaj9p.png" border=0></a> -->
 	<!-- <a href="Webcomic/support.html"><img src="" border=0></a> -->
 </div>
-  <img src="Tetzlaff3.PNG" width="750" height="1050"/><br />
+  <img src="Tetzlaff3.png" width="750" height="1050"/><br />
   <a href="Tetzlaff2.html"><img src="prev.jpg" alt="prev" width="180px" height="48px"/></a>
   <a href="Tetzlaff4.html"><img src="next.jpg" alt="next" width="135px" height="48px"/></a>
 </center>
