--- a/Tetzlaff4.html
+++ b/Tetzlaff4.html
@@ -57,7 +57,7 @@ td {padding: 5px;}
 	<!-- <a href="Webcomic/support.html"><img src="" border=0></a> -->
 </div>
   <img src="Tetzlaff4.png" width="750" height="1050"/><br />
-  <a href="never3.html"><img src="prev.jpg" alt="prev" width="180px" height="48px"/></a>
+  <a href="Tetzlaff3.html"><img src="prev.jpg" alt="prev" width="180px" height="48px"/></a>
 </center>
 
   <footer text-align="center"><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a>"Arthropunk" and all related properties by Vernon Meidlinger-Chin are licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a></footer>
