--- a/ferrets_1.html
+++ b/ferrets_1.html
@@ -18,14 +18,14 @@
 	<a href="http://www.arthropunk.com/support"><img src="" border=0></a> -->
 </div>
 <center>
-<img src="t2.jpg" width=" " height=" "/><br />
+<img src="t2.jpg" width="500" height="500"/><br />
 
-<a href="arthropunk_origin.html">
-	<img src="prev.PNG" alt="previous" width="180px" height="48px"/>
+<a href="arthropunk_origins.html">
+	<img src="prev.jpg" alt="previous" width="180px" height="48px"/>
 		</a>
 
 <a href="ferrets_2.html">
-	<img src="next.PNG" alt="next" width="135px" height="48px"/>
+	<img src="next.jpg" alt="next" width="135px" height="48px"/>
 		</a>
 
 	</center>
