--- a/ferrets_1.html
+++ b/ferrets_1.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>
-		</title>
+	<title>Ferrets, Part 1</title>
 	<link href="style.css" type="text/css" rel="stylesheet">
 
 </head>
