Update and rename richard_and_addie.html to hey_seth_1.html

--- a/hey_seth_1.html
+++ b/hey_seth_1.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>
-		</title>
+	<title>Hey Seth, Part 1</title>
 	<link href="style.css" type="text/css" rel="stylesheet">
 
 </head>
@@ -18,13 +17,13 @@
 	<a href="http://www.arthropunk.com/support"><img src="" border=0></a> -->
 </div>
 <center>
-<img src="t12.jpg" width="500" height="500"/><br />
+<img src="t13.jpg" width="500" height="500"/><br />
 
 <a href="richard_and_gregor_go_shopping.html">
 	<img src="prev.jpg" alt="previous" width="180px" height="48px"/>
 		</a>
 
-<a href="hey_seth_1.html">
+<a href="hey_seth_2.html">
 	<img src="next.jpg" alt="next" width="135px" height="48px"/>
 		</a>
 
