--- a/richard_and_gregor_go_shopping.html
+++ b/richard_and_gregor_go_shopping.html
@@ -23,7 +23,7 @@
 	<img src="prev.jpg" alt="previous" width="180px" height="48px"/>
 		</a>
 
-<a href="richard_and_addie.html">
+<a href="hey_seth_1.html">
 	<img src="next.jpg" alt="next" width="135px" height="48px"/>
 		</a>
 
