--- a/ferrets_2.html
+++ b/ferrets_2.html
@@ -9,10 +9,11 @@
 <!-- Begin Webcomic Content -->
 
 <body><div class="navigation"><center>
-	<a href="http://www.arthropunk.com/about"><img src="https://imgur.com/wZvUHlX.png" border=0></a>
-	<a href="http://www.arthropunk.com/comics"><img src="https://imgur.com/IPBhFlZ.png" border=0></a>
-	<a href="http://www.arthropunk.com/podcast"><img src="https://imgur.com/AjmqTnJ.png" border=0></a>
-	<a href="http://www.arthropunk.com/follow"><img src="https://imgur.com/zvlTbo3.png" border=0></a>
+	<a href="index.html"><img src="home.png" border=0></a>
+	<a href="about.html"><img src="about.png" border=0></a>
+	<a href="comics.html"><img src="comics.png" border=0></a>
+	<a href="podcast.html"><img src="podcast.png" border=0></a>
+	<a href="follow.html"><img src="follow.png" border=0></a>
 	<!-- <a href="http://www.arthropunk.com/contact"><img src="https://imgur.com/9DEaj9p.png" border=0></a> 
 	<a href="http://www.arthropunk.com/support"><img src="" border=0></a> -->
 </div>
