--- a/police_1.html
+++ b/police_1.html
@@ -7,16 +7,16 @@
 
 <!-- Begin Webcomic Content -->
 
-<body><div class="navigation"><center>
-	<a href="http://www.arthropunk.com/about"><img src="https://imgur.com/wZvUHlX.png" border=0></a>
-	<a href="http://www.arthropunk.com/comics"><img src="https://imgur.com/IPBhFlZ.png" border=0></a>
-	<a href="http://www.arthropunk.com/podcast"><img src="https://imgur.com/AjmqTnJ.png" border=0></a>
-	<a href="http://www.arthropunk.com/follow"><img src="https://imgur.com/zvlTbo3.png" border=0></a>
+<body><center><div class="navigation">
+	<a href="index.html"><img src="home.PNG" alt="home" border=0></a>
+	<a href="about.html"><img src="about.PNG" alt="about" border=0></a>
+	<a href="comics.html"><img src="comics.PNG" alt="comics" border=0></a>
+	<a href="podcast.html"><img src="podcast.PNG" alt="podcast" border=0></a>
+	<a href="follow.html"><img src="follow.PNG" alt="follow" border=0></a>
 	<!-- <a href="http://www.arthropunk.com/contact"><img src="https://imgur.com/9DEaj9p.png" border=0></a> 
 	<a href="http://www.arthropunk.com/support"><img src="" border=0></a> -->
 </div>
-<center>
-<img src="t10.jpg" width="500" height="500"/><br />
+<img src="t10.jpg" width="600" height="500"/><br />
 
 <a href="frosties.html">
 	<img src="prev.jpg" alt="previous" width="180px" height="48px"/>
