--- a/index.html
+++ b/index.html
@@ -1,44 +1,9 @@
 <!DOCTYPE html>
 <html>
-<head><style>
-p {
-	font-size: 16px;
-	text-align: left;
-	font-family: "georgia";
-	border: 0px solid black;
-	width: 500px;
-	margin: 50px auto;
-}
-
-#intro{
-	padding: 50px;
-	margin: 50px 100px;
-}
-
-footer {
-	text-align: center;
-	margin: 150px auto 0px auto;
-	border: 1px dotted black;
-	padding: 0px 0px;
-	font-family: "georgia";
-	width: 700px;	
-}
-
-.img-circle {border-radius: 50%;}
-
-.img-circle:hover {border: 4px solid #FF3;}
-
-.header {
-	background:url(title.PNG) top center no-repeat; 
-	margin: 0 auto; 
-	padding-top: 150px;
-}
-
-a {color: black;}
-	
-</style>
+<head>
 	<title> Arthropunk by Vernon Meidlinger-Chin</title>
-	</head>
+	<link href="style.css" rel="stylesheet" type="text/css">
+</head>
 
 <!-- Begin Webcomic Content -->
 
