Add meta to head to pull in media queries; Add example media query for .nav

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 	<title> Arthropunk by Vernon Meidlinger-Chin</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<link href="style.css" rel="stylesheet" type="text/css">
 </head>
 
