--- a/about.html
+++ b/about.html
@@ -21,8 +21,8 @@
 		<!-- <a href="/contact.html"><img src="https://imgur.com/9DEaj9p.png" border=0></a>
 		<a href="/support.html"><img src="" border=0></a> -->
 	</div></center>
-
-<p>
+		<h1></h1>
+<div class="blog"><p>
 <b>About the author</b><br /><br /> 
 
 Greetings! I am Vernon Meidlinger-Chin, writer and illustrator of "Arthropunk" and related (and some not-so-related) comics. Thanks for reading and feel free to reach out.
@@ -39,7 +39,7 @@ email: adventurevernon (at) protonmail (dot) com<br />twitter: (at) adventurever
 <i>Does biweekly mean twice a week or every other week?</i><br /><br />No more questions, child<br /><br />
 <i>Why do your comics suck?</i><br /><br />They don't. You suck!<br /><br />
 <i>Why do your comics rule?</i><br /><br />They don't. You rule!<br /><br />
-</p>
+	</p></div>
 	<footer text-align="center"><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a>		"Arthropunk" and all related properties by Vernon Meidlinger-Chin are licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a></footer>
 
 </body>
