--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 		<!-- <a href="/contact.html"><img src="https://imgur.com/9DEaj9p.png" border=0></a> -->
 		<!-- <a href="/support.html"><img src="" border=0></a> -->
 	</div><table class="homepage"><tr>
-	<td style="text-align: right;"><h1></h1><img src="newest.PNG" alt="NEWEST COMIC:" width="230px" height="50px"/><br/><br/><br/><a href=""><img src="prev.jpg" alt="previous" width="120px" height="32px"/></a><br/><br/><a href=""><img src="first.PNG" alt="first" width="70px" height="36px"/></a></td>
-	<td><img src="mostrecent.jpg" width="525" height="500"/></td>
+	<td style="text-align: right;"><h1></h1><a href="all-my-friends-are-machines36.html"><img src="newest.PNG" alt="NEWEST COMIC:" width="230px" height="50px"/></a><br/><br/><br/><a href="all-my-friends-are-machines35.html"><img src="prev.jpg" alt="previous" width="120px" height="32px"/></a><br/><br/><a href="all-my-friends-are-machines1.html"><img src="first.PNG" alt="first" width="70px" height="36px"/></a></td>
+	<td><img src="a36.jpg" width="600" height="800"/></td>
 </tr></table>
 	<div class="blog"><h3><span style="font-size: 20px;">W</span>ELCOME TO <span style="font-size: 20px;">A</span>RTHROPUNK</h3>
 	<p class="nomargin">
