--- a/never6.html
+++ b/never6.html
@@ -1,47 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head><style>
-h2 {
-	font-size: 18px;
-	text-align: left;
-	font-family: "georgia";
-}
-p {
-	font-size: 16px;
-	text-align: left;
-	font-family: "georgia";
-	border: 1px solid black;
-	width: 500px;
-	margin: 50px auto;
-}
-#intro{
-	padding: 50px;
-	margin: 50px 100px;
-}
-footer {
-	text-align: center;
-	margin: 150px auto 0px auto;
-	border: 1px dotted black;
-	padding: 0px 0px;
-	font-family: "georgia";
-	width: 700px;	
-}
-.img-circle {border-radius: 50%;}
-.img-circle:hover {border: 4px solid #FF3;}
-.header {
-	background:url(https://imgur.com/MfUIu9Q.png) top center no-repeat; 
-	margin: 0 auto; 
-	padding-top: 150px;
-}
-a {color: black;}
-table {
-	font-size: 16px;
-	font-family: "georgia";
-	width: 600px;
-	margin: 50px auto 0 auto;
-}
-td {padding: 5px;}
-</style><title>Page 6</title></head>
+<head><link href="style.css" rel="stylesheet" type="text/css"><title>Page 6</title></head>
 
 <!-- Begin Webcomic Content -->
 
@@ -56,7 +15,7 @@ td {padding: 5px;}
 	<!-- <a href="Webcomic/contact.html"><img src="https://imgur.com/9DEaj9p.png" border=0></a> -->
 	<!-- <a href="Webcomic/support.html"><img src="" border=0></a> -->
 </div>
-  <img src="never6.jpg" width="750" height="750"/><br />
+  <br/><img src="never6.jpg" width="750" height="750"/><br />
   <a href="never5.html"><img src="prev.jpg" alt="prev" width="180px" height="48px"/></a>
   <a href="never7.html"><img src="next.jpg" alt="next" width="135px" height="48px"/></a>
 </center>
