--- a/Tetzlaff1.html
+++ b/Tetzlaff1.html
@@ -15,7 +15,7 @@
 	<!-- <a href="Webcomic/contact.html"><img src="https://imgur.com/9DEaj9p.png" border=0></a> -->
 	<!-- <a href="Webcomic/support.html"><img src="" border=0></a> -->
 </div>
-  <img src="Tetzlaff1.png" width="750" height="1050"/><br />
+  <br/><img src="Tetzlaff1.png" width="750" height="1050"/><br />
   <a href="Tetzlaff2.html"><img src="next.jpg" alt="next" width="135px" height="48px"/></a>
 </center>
 
