--- a/all-my-friends-are-machines20.html
+++ b/all-my-friends-are-machines20.html
@@ -18,11 +18,11 @@
      <!-- <a href="http://www.arthropunk.com/contact"><img src="https://imgur.com/9DEaj9p.png" border=0></a> 
      <a href="http://www.arthropunk.com/support"><img src="" border=0></a> -->
    </div>
-    <br /><img src="a20.jpg" width="600" height="800"/><br />
+    <br /><img src="a20.JPG" width="600" height="800"/><br />
     <a href="all-my-friends-are-machines19.html"><img src="prev.jpg" alt="previous" width="180px" height="48px"/></a>
     <a href="all-my-friends-are-machines21.html"><img src="next.jpg" alt="next" width="135px" height="48px"/></a>
  </center>
  <footer text-align="center"><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a>"Arthropunk" and all related properties by Vernon Meidlinger-Chin are licensed under a <a rel="license" 
 href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a></footer>
 </body>
-</html>
+</html>
