--- a/all-my-friends-are-machines36.html
+++ b/all-my-friends-are-machines36.html
@@ -18,7 +18,7 @@
      <!-- <a href="http://www.arthropunk.com/contact"><img src="https://imgur.com/9DEaj9p.png" border=0></a> 
      <a href="http://www.arthropunk.com/support"><img src="" border=0></a> -->
    </div>
-    <br /><img src="a36.JPG" width="600" height="800"/><br />
+    <br /><img src="a36.jpg" width="600" height="800"/><br />
     <a href="all-my-friends-are-machines35.html"><img src="prev.jpg" alt="previous" width="180px" height="48px"/></a>
     <a href="all-my-friends-are-machines37.html"><img src="next.jpg" alt="next" width="135px" height="48px"/></a>
  </center>
