--- a/comics.html
+++ b/comics.html
@@ -3,7 +3,10 @@
 <html>
 <head>
 	<link href="style.css" rel="stylesheet" type="text/css">
-	<title>Comics - Arthropunk</title>
+	<title>Comics - Arthropunk</title>	
+	<meta http-equiv="author" content="Vernon Meidlinger-Chin">
+	<meta http-equiv="description" content="Online graphic novel by, for, and about Rock and Roll Insects">
+	<meta http-equiv="keywords" content="comic, webcomic, graphic novel, punk, insect, music, arthropod, entomology, feels, funny">
 </head>
 
 <!-- Begin Webcomic Content -->
