--- a/comics.html
+++ b/comics.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link href="style.css" rel="stylesheet" type="text/css">
+	<link href="style.css" rel="stylesheet" type="text/css"><link rel="shortcut icon" href="favicon.ico">
 	<title>Comics - Arthropunk</title>	
 	<meta http-equiv="author" content="Vernon Meidlinger-Chin">
 	<meta http-equiv="description" content="Online graphic novel by, for, and about Rock and Roll Insects">
