--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
 	<title> Arthropunk! Webcomic by Vernon Meidlinger-Chin</title>
 	<link href="style.css" rel="stylesheet" type="text/css">
-	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 	<meta http-equiv="author" content="Vernon Meidlinger-Chin">
 	<meta http-equiv="description" content="Online graphic novel by, for, and about Rock and Roll Insects">
 	<meta http-equiv="keywords" content="comic, webcomic, graphic novel, punk, insect, music, arthropod, entomology, feels, funny">
+	<link rel="shortcut icon" href="arthroicon.ico" type="image/x-icon">
+
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-109651657-1"></script>
 <script>
@@ -17,7 +18,7 @@
   gtag('config', 'UA-109651657-1');
 </script>
 </head>
-
+	
 <!-- Begin Webcomic Content -->
 
 <body>
