--- a/about.html
+++ b/about.html
@@ -2,12 +2,13 @@
 <html>
 <head>
 <link href="style.css" rel="stylesheet" type="text/css">
-	<link rel="shortcut icon" href="favicon.ico">
 <title>About - Arthropunk</title></head>
 <meta http-equiv="author" content="Vernon Meidlinger-Chin">
 <meta http-equiv="description" content="Online graphic novel by, for, and about Rock and Roll Insects">
 <meta http-equiv="keywords" content="comic, webcomic, graphic novel, punk, insect, music, arthropod, entomology, feels, funny">
-<!-- Global site tag (gtag.js) - Google Analytics -->
+<link rel="shortcut icon" href="arthroicon.ico" type="image/x-icon">
+
+	<!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-109651657-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -15,7 +16,8 @@
   gtag('js', new Date());
 
   gtag('config', 'UA-109651657-1');
-</script></head>
+</script>
+	</head>
 
 <!-- Begin Webcomic Content -->
 
