--- a/couchtalk.html
+++ b/couchtalk.html
@@ -3,6 +3,17 @@
  <head>
   <title>Couch Talk</title>
   <link href="style.css" type="text/css" rel="stylesheet">
+  <link rel="shortcut icon" href="arthroicon.ico" type="image/x-icon">
+
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-109651657-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-109651657-1');
+</script>
  </head>
 
 <!-- Begin Webcomic Content -->
