--- a/comics.html
+++ b/comics.html
@@ -42,7 +42,7 @@
 	<td><h2>"Never never never never never"</h2>In this science-fiction tale, set not so far in the future, humanity faces the most frightening cosmic threat: loneliness.<br><br><i>~page count:</i><br><a href="never1.html">1</a> / <a href="never2.html">2</a> / <a href="never3.html">3</a> / <a href="never4.html">4</a> / <a href="never5.html">5</a> / <a href="never6.html">6</a> / <a href="never7.html">7</a> / <a href="never8.html">8</a> / <a href="never9.html">9</a> / <a href="never10.html">10</a> / <a href="never11.html">11</a> / <a href="never12.html">12</a> </td></tr></table>
 
 <table><td><a><img class=img-up" src="tetzlaff.jpg" width="250" height="385" border="1px solid black" style="vertical-align: top;" /></a></td>
-	<td><h2>"Michael Tetzlaff and the World's Best Borscht"</h2>Originally published in <i>Scoff Zine</i>, 2013.<br><br><i>~page count:</i><br><a href="Tetzlaff1.html">1</a> / <a href="Tetzlaff2.html">2</a> / <a href="Tetzlaff3.html">3</a> / <a href="Tetzlaff4.html">4</a></td></tr></table>
+	<td><h2>"Michael Tetzlaff and the World's Best Borscht"</h2>Originally published in <a href="https://issuu.com/ScoffZine/docs/scoff_zine"><i>Scoff Zine</i></a>, 2013.<br><br><i>~page count:</i><br><a href="Tetzlaff1.html">1</a> / <a href="Tetzlaff2.html">2</a> / <a href="Tetzlaff3.html">3</a> / <a href="Tetzlaff4.html">4</a></td></tr></table>
 
 <table><td><a><img class=img-up" src="cyclops.jpg" width="250" height="250" border="1px solid black" style="vertical-align: top;" /></a></td>
 	<td><h2>"The Cyclops Shark"</h2>Originally published in <i>SAGA</i>, 2011.<br><br><i>~page count:</i><br><a href="cyclops_shark1.html">1</a> / <a href="cyclops_shark2.html">2</a> / <a href="cyclops_shark3.html">3</a></td></tr></table>
