--- a/comics.html
+++ b/comics.html
@@ -39,7 +39,7 @@
 
 	<h1 id="short-stories"><span style="font-size: 20px";>S</span>hort <span style="font-size: 20px";>S</span>tories</h1>
 	<table><td><a><img class=img-up" src="two-anatomies.PNG" width="250" height="180" border="1px solid black" style="vertical-align: top;" /></a></td>
-	<td><h2>"Two Anatomies of Loneliness"</h2>A poem</td></table>
+	<td><a href="two-anatomies-of-loneliness.html><h2>"Two Anatomies of Loneliness"</h2>A poem</a></td></table>
 	<table><td><a><img class="img-up" src="short-stories.jpg.jpg" width="250" height="250" border="1px solid black" style="vertical-align: top;" /></a></td>
 	<td><h2>"Never never never never never"</h2>In this science-fiction tale, set not so far in the future, humanity faces the most frightening cosmic threat: loneliness.<br><br><i>~page count:</i><br><a href="never1.html">1</a> / <a href="never2.html">2</a> / <a href="never3.html">3</a> / <a href="never4.html">4</a> / <a href="never5.html">5</a> / <a href="never6.html">6</a> / <a href="never7.html">7</a> / <a href="never8.html">8</a> / <a href="never9.html">9</a> / <a href="never10.html">10</a> / <a href="never11.html">11</a> / <a href="never12.html">12</a> </td></tr></table>
 
