--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
 <body>
 	<center><div class="header">
 		<a href="comics.html#dailies"><img class="img-circle" src="dailies.jpg.jpg" alt=""Dailies"" border="4px solid black" width="200" height="200" /></a>
-		<a href="comics.html#all-my-friends-are-machines"><img class="img-circle" src="amfam.jpg.jpg" alt="All My Friends Are Machines" border="4px solid black" width="200" height="200" /></a>
+		<a href="comics.html#intimacy"><img class="img-circle" src="intimacy.jpg" alt="Intimacy" border="4px solid black" width="200" height="200" /></a>
 		<a href="comics.html#short-stories"><img class="img-circle" src="short-stories.jpg.jpg"alt="Short Stories" border="4px solid black" width="200" height="200" /></a>
 	</div>
 	<div class="navigation"><center>
